create style.css and add link to it

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
    <head>
-     <title>hello</title>
+   <link rel='stylesheet' type="text/css" href="style.css" >
+       <title>hello</title>
    </head>
    <body>
    <h1>
