--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
    <head>
-   <link rel='stylesheet' type="text/css" href="style.css" >
+   <link rel='stylesheet' type="text/css" href="style.css"  >
        <title>hello</title>
    </head>
    <body>
    <h1>
    body telo
+   new
    </h1>
    </body>
 </html>
