--- a/page3.html
+++ b/page3.html
@@ -1,4 +1,5 @@
 <head></head>
 <body><h1>test</h1>
-	<h3>text for test merge conflict</h3>	
+	<h3>text for test merge conflict</h3
+	>	
 	<h2></body>
